# xlerobot-rl

./: .gitignore  README.md  pyproject.toml
configs/calibration/: head_camera_extrinsics.yaml  head_camera_intrinsics_1280x720.yaml
configs/real/: xlerobot_right_arm_720p.yaml
configs/reward/: reward_dataset_v0.json  reward_holdout_v0.json
docs/: bc_dataset_schema.md  bc_dataset_schema_zh.md  decisions.md  hardware_readonly_test.md  interface_contract.md  logging_schema.md  m4_target_conditioned_env.md  reward_dataset_collection_zh.md  right_arm_master_slave.md
scripts/: test_setup.py  visualize_xlerobot.py  visualize_xlerobot.py.bak
scripts/calibration/: capture_calibration_images.py  check_apriltag_visibility.py  collect_handeye_apriltag.py  solve_handeye_apriltag.py  verify_head_camera_extrinsics_rgbd.py
scripts/data_collection/: merge_lerobot_datasets.py
scripts/deploy/: debug_so101_joint_follow.py  head_camera_servos.py  record_bc_continuous.py  record_bc_demo.py  record_reward_classifier_states.py  right_arm_master_slave.py  run_bc_policy.py
scripts/diagnostic/: README.md  diagnose_robot_motion.py  diagnose_urdf_physics.py  load_my_urdf.py  measure_tcp_offset.py  test_urdf_with_drive.py
scripts/eval/: eval_bc_policy.py  eval_env_random.py  eval_reward_classifier.py  eval_reward_sequence_classifier.py
scripts/sanity/: check_camera_fps.py  check_lerobot_dataset.py  check_m4_target_env.py  check_reward_dataset.py  demo_m1_v0.py  detect_real_red_cube.py  test_grounding.py
scripts/train/: train_bc_overfit.py  train_reward_classifier.py  (+1 more)
(+24 files in other folders)
