[project]
name = "xlerobot-rl"
version = "0.1.0"
description = "VLM-guided mobile manipulation on XLeRobot"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.4.0",
    "torchvision",
    "numpy<2.0",
    "mani-skill>=3.0",
    "stable-baselines3>=2.3.0",
    "hydra-core>=1.3",
    "wandb>=0.17",
    "opencv-python",
    "transforms3d",
    "h5py",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "black", "ipython", "jupyter", "pdf2image", "pypdf"]
real = [
    "pyrealsense2",
    "lerobot==0.4.4",
    "feetech-servo-sdk>=1.0.0,<2.0.0",  # provides scservo_sdk for SO101 motors
]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
